values-sk update (#479)
* Ledger and NFC support added
* minor typo fixes
* removed string  <string name="menu_language">

--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -334,32 +334,32 @@
     <string name="status_wallet_connect_wrongversion">Nekompatibilný s verziou uzla - nutná aktualizácia!</string>
 
     <string name="menu_info">Detaily</string><!--Changed to: Show Secrets!-->
-    <string name="menu_streetmode">Street Mode</string>
 
-    <string name="info_nodes_enabled">Node-o-matiC enabled, tap for more info.</string>
-    <string name="node_height">Last block updated: %1$s</string>
-    <string name="label_nodes">Nodes</string>
-    <string name="node_name_hint">Node Name (Optional)</string>
-    <string name="node_address_hint">Hostname</string>
+    <string name="menu_streetmode">Mód Ulica</string>
+    <string name="info_nodes_enabled">Node-o-matiC povolený, klepni pre viac info.</string>
+    <string name="node_height">Posledný blok aktualizovaný: %1$s</string>
+    <string name="label_nodes">Uzly</string>
+    <string name="node_name_hint">Názov Uzla (voliteľné)</string>
+    <string name="node_address_hint">Adresa (Hostname)</string>
     <string name="node_port_hint">Port</string>
-    <string name="node_user_hint">Username (Optional)</string>
-    <string name="node_pass_hint">Password (Optional)</string>
-    <string name="node_host_unresolved">Cannot resolve host</string>
-    <string name="node_host_empty">We need this!</string>
-    <string name="node_port_numeric">Must be numeric</string>
-    <string name="node_port_range">Must be 1&#8211;65535</string>
-    <string name="node_fab_add">Add Node</string>
-    <string name="node_refresh_hint">Touch to refresh!</string>
-    <string name="node_test_error">CONNECTION ERROR %1$d</string>
-    <string name="node_general_error">CONNECTION ERROR</string>
-    <string name="node_auth_error">AUTHENTICATION FAILED</string>
-    <string name="node_result_label">Test Result:</string>
-    <string name="node_result">Height: %1$s (v%2$d), Ping: %3$.0fms, IP: %4$s</string>
-    <string name="node_testing">Testing IP: %1$s &#8230;</string>
-    <string name="node_refresh_wait">Please wait for scan to finish</string>
-    <string name="node_create_hint">Touch to select or add nodes</string>
-    <string name="node_pull_hint">Add nodes manually or pull down to scan</string>
-    <string name="node_scanning">Scanning network&#8230;</string>
-    <string name="node_nobookmark">Automatically bookmarked best %1$d nodes</string>
+    <string name="node_user_hint">Užívateľ (voliteľné)</string>
+    <string name="node_pass_hint">Heslo (voliteľné)</string>
+    <string name="node_host_unresolved">Nemôžem preložiť názov hosta</string>
+    <string name="node_host_empty">Toto treba určite!</string>
+    <string name="node_port_numeric">Musí byť číslo</string>
+    <string name="node_port_range">Musí byť 1&#8211;65535</string>
+    <string name="node_fab_add">Pridať Uzol</string>
+    <string name="node_refresh_hint">Obnoviť!</string>
+    <string name="node_test_error">CHYBA SPOJENIA %1$d</string>
+    <string name="node_general_error">CHYBA SPOJENIA</string>
+    <string name="node_auth_error">Overenie prihlásením zlyhalo</string>
+    <string name="node_result_label">Výsledok testu:</string>
+    <string name="node_result">Výška: %1$s (v%2$d), Ping: %3$.0fms, IP: %4$s</string>
+    <string name="node_testing">Testujem IP: %1$s &#8230;</string>
+    <string name="node_refresh_wait">Prosím počkajte, kým sa skenovanie nedokončí</string>
+    <string name="node_create_hint">Vyber alebo pridaj uzly</string>
+    <string name="node_pull_hint">Pridaj uzly manuálne alebo potiahni dole pre skenovanie</string>
+    <string name="node_scanning">Skenivanie siete&#8230;</string>
+    <string name="node_nobookmark">Automaticky ukladám %1$d najlepších uzlov</string>
     <string name="label_test">Test</string><!--note: as in "Test a network connection"-->
 </resources>
