--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -298,6 +298,7 @@
     <string name="accounts_drawer_new">Loo konto</string>
     <string name="accounts_new">Uus konto lisatud #%1$d</string>
     <string name="tx_account">Konto #</string>
+    <string name="tx_address">Aadress</string>
 
     <string name="send_sweepall">Saada kõik selle konto kinnitatud vahendid!</string>
     <string name="tx_subaddress">Alamaadress #%1$d</string>
