[IT-Translation] help.xml / strings.xml - First Issue (#480)
* [IT-Translation] help.xml / strings.xml

* [IT-Translation] Fixes from @erciccione and @serhack

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -340,30 +340,30 @@
     <string name="menu_info">Mostra i segreti!</string>
     <string name="menu_streetmode">Modalità strada</string>
 
-    <string name="info_nodes_enabled">Node-o-matiC enabled, tap for more info.</string>
-    <string name="node_height">Last block updated: %1$s</string>
-    <string name="label_nodes">Nodes</string>
-    <string name="node_name_hint">Node Name (Optional)</string>
-    <string name="node_address_hint">Hostname</string>
-    <string name="node_port_hint">Port</string>
-    <string name="node_user_hint">Username (Optional)</string>
-    <string name="node_pass_hint">Password (Optional)</string>
-    <string name="node_host_unresolved">Cannot resolve host</string>
-    <string name="node_host_empty">We need this!</string>
-    <string name="node_port_numeric">Must be numeric</string>
-    <string name="node_port_range">Must be 1&#8211;65535</string>
-    <string name="node_fab_add">Add Node</string>
-    <string name="node_refresh_hint">Touch to refresh!</string>
-    <string name="node_test_error">CONNECTION ERROR %1$d</string>
-    <string name="node_general_error">CONNECTION ERROR</string>
-    <string name="node_auth_error">AUTHENTICATION FAILED</string>
-    <string name="node_result_label">Test Result:</string>
-    <string name="node_result">Height: %1$s (v%2$d), Ping: %3$.0fms, IP: %4$s</string>
-    <string name="node_testing">Testing IP: %1$s &#8230;</string>
-    <string name="node_refresh_wait">Please wait for scan to finish</string>
-    <string name="node_create_hint">Touch to select or add nodes</string>
-    <string name="node_pull_hint">Add nodes manually or pull down to scan</string>
-    <string name="node_scanning">Scanning network&#8230;</string>
-    <string name="node_nobookmark">Automatically bookmarked best %1$d nodes</string>
-    <string name="label_test">Test</string><!--note: as in "Test a network connection"-->
+    <string name="info_nodes_enabled">Node-o-matiC abilitato, tocca per maggiori informazioni.</string>
+    <string name="node_height">Ultimo blocco aggiornato: %1$s</string>
+    <string name="label_nodes">Nodi</string>
+    <string name="node_name_hint">Nome nodo (opzionale)</string>
+    <string name="node_address_hint">Nome host</string>
+    <string name="node_port_hint">Porta</string>
+    <string name="node_user_hint">Nome utente (opzionale)</string>
+    <string name="node_pass_hint">Password (opzionale)</string>
+    <string name="node_host_unresolved">Host non risolvibile</string>
+    <string name="node_host_empty">Abbiamo bisogno di questo!</string>
+    <string name="node_port_numeric">Deve essere numerico</string>
+    <string name="node_port_range">Deve essere 1&#8211;65535</string>
+    <string name="node_fab_add">Aggiungi nodo</string>
+    <string name="node_refresh_hint">Tocca per aggiornare!</string>
+    <string name="node_test_error">ERRORE CONNESSIONE %1$d</string>
+    <string name="node_general_error">ERRORE CONNESSIONE</string>
+    <string name="node_auth_error">AUTENTICAZIONE FALLITA</string>
+    <string name="node_result_label">Risultato del test:</string>
+    <string name="node_result">Altezza: %1$s (v%2$d), Ping: %3$.0fms, IP: %4$s</string>
+    <string name="node_testing">Controllo IP: %1$s &#8230;</string>
+    <string name="node_refresh_wait">Attendi il termine della scansione</string>
+    <string name="node_create_hint">Tocca per selezionare o aggiungere nodi</string>
+    <string name="node_pull_hint">Aggiungi nodi manualmente o tira giù per effettuare scansione</string>
+    <string name="node_scanning">Scansione rete&#8230;</string>
+    <string name="node_nobookmark">Aggiunti automaticamente ai segnalibri i %1$d nodi migliori</string>
+    <string name="label_test">Effettua Test</string><!--note: as in "Test a network connection"-->
 </resources>
