--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -337,30 +337,30 @@
     <string name="menu_info">顯示私鑰資訊</string>
     <string name="menu_streetmode">低調模式</string>
 
-    <string name="info_nodes_enabled">Node-o-matiC enabled, tap for more info.</string>
-    <string name="node_height">Last block updated: %1$s</string>
-    <string name="label_nodes">Nodes</string>
-    <string name="node_name_hint">Node Name (Optional)</string>
-    <string name="node_address_hint">Hostname</string>
-    <string name="node_port_hint">Port</string>
-    <string name="node_user_hint">Username (Optional)</string>
-    <string name="node_pass_hint">Password (Optional)</string>
-    <string name="node_host_unresolved">Cannot resolve host</string>
-    <string name="node_host_empty">We need this!</string>
-    <string name="node_port_numeric">Must be numeric</string>
-    <string name="node_port_range">Must be 1&#8211;65535</string>
-    <string name="node_fab_add">Add Node</string>
-    <string name="node_refresh_hint">Touch to refresh!</string>
-    <string name="node_test_error">CONNECTION ERROR %1$d</string>
-    <string name="node_general_error">CONNECTION ERROR</string>
-    <string name="node_auth_error">AUTHENTICATION FAILED</string>
-    <string name="node_result_label">Test Result:</string>
-    <string name="node_result">Height: %1$s (v%2$d), Ping: %3$.0fms, IP: %4$s</string>
-    <string name="node_testing">Testing IP: %1$s &#8230;</string>
-    <string name="node_refresh_wait">Please wait for scan to finish</string>
-    <string name="node_create_hint">Touch to select or add nodes</string>
-    <string name="node_pull_hint">Add nodes manually or pull down to scan</string>
-    <string name="node_scanning">Scanning network&#8230;</string>
-    <string name="node_nobookmark">Automatically bookmarked best %1$d nodes</string>
-    <string name="label_test">Test</string><!--note: as in "Test a network connection"-->
+    <string name="info_nodes_enabled">節點管理工具已啟用，點選了解更多。</string>
+    <string name="node_height">最後區塊更新：%1$s</string>
+    <string name="label_nodes">節點</string>
+    <string name="node_name_hint">節點名稱 (選填)</string>
+    <string name="node_address_hint">網址</string>
+    <string name="node_port_hint">通訊埠</string>
+    <string name="node_user_hint">登入名稱 (選填)</string>
+    <string name="node_pass_hint">密碼 (選填)</string>
+    <string name="node_host_unresolved">無法解析主機</string>
+    <string name="node_host_empty">我們需要這個資訊！</string>
+    <string name="node_port_numeric">必須是數字</string>
+    <string name="node_port_range">必須介於 1&#8211;65535</string>
+    <string name="node_fab_add">新增節點</string>
+    <string name="node_refresh_hint">點選以重新整理！</string>
+    <string name="node_test_error">連接錯誤 %1$d</string>
+    <string name="node_general_error">連接錯誤</string>
+    <string name="node_auth_error">認證失敗</string>
+    <string name="node_result_label">測試結果：</string>
+    <string name="node_result">高度: %1$s (v%2$d), 延遲: %3$.0fms, IP: %4$s</string>
+    <string name="node_testing">測試 IP: %1$s &#8230;</string>
+    <string name="node_refresh_wait">請等待掃描完成</string>
+    <string name="node_create_hint">點選以選擇或新增節點</string>
+    <string name="node_pull_hint">手動新增節點或下拉畫面以開始掃描</string>
+    <string name="node_scanning">掃描節點中&#8230;</string>
+    <string name="node_nobookmark">已自動加入 %1$d 節點至書籤</string>
+    <string name="label_test">測試節點</string>
 </resources>
